# stuff-rs

./: Cargo.toml
app/: Cargo.toml
app/examples/: app.rs
app/src/: app.rs  error.rs  lib.rs  module.rs
app/src/phase/: config.rs  init.rs  mod.rs  phase.rs  ready.rs
cli-update/: Cargo.toml
cli-update/examples/: cli.rs  cliupdate.rs
cli-update/src/: event_loop.rs  lib.rs  manager.rs  message_list.rs
cli-update/src/message/: message.rs  message_ext.rs  message_impl.rs  mod.rs
cliupdate/: Cargo.toml
cliupdate/examples/: cliupdate2.rs
cliupdate/src/: lib.rs  manager.rs  spinner.rs
cliupdate/src/message/: message.rs  message_ext.rs  message_impl.rs
dale/: Cargo.toml
dale-http/: Cargo.toml
dale-http/examples/: http.rs
dale-http/src/: body.rs  error.rs  hyper.rs  lib.rs  modifier.rs  modifiers.rs  reply.rs  request_ext.rs  taker.rs
dale-http/src/common/: aggregate.rs  buf.rs  mod.rs  stream.rs  to_bytes.rs  to_string.rs
dale-http/src/file/: file_conditional.rs  file_options.rs  mod.rs
dale-http/src/filters/: body.rs  header.rs  method.rs  mod.rs  url.rs
dale/src/: and.rs  boxed.rs  err_into.rs  into_outcome.rs  lib.rs  macros.rs  map.rs  map_err.rs  middleware.rs  outcome.rs  outcome_impl.rs  service.rs  service_ext.rs  types.rs
dale/src/combinators/: and_then.rs  err_into.rs  mod.rs  or.rs  shared.rs  then.rs
dale/src/filters/: and.rs  map.rs  mod.rs
driver/: Cargo.toml
driver/examples/: driver.rs
driver/src/: lib.rs
emitter/: Cargo.toml
emitter/src/: emitter.rs  lib.rs
emitter/src/transport/: func.rs  into_listener.rs  mod.rs  pool.rs  reply.rs  thread.rs
emitter/src/transport/async/: mod.rs
emitter/src/transport/direct/: mod.rs  non_send.rs  sync.rs
fetcher/: Cargo.toml
fetcher/examples/: http.rs
fetcher/src/: error.rs  lib.rs  types.rs
fetcher/src/fs/: mod.rs  request.rs  service.rs  transport.rs
fetcher/src/http/: mod.rs  request.rs  service.rs  transport.rs
fetcher/src/service/: mod.rs
listr/: Cargo.toml
listr/src/: lib.rs
locking/: Cargo.toml
locking/src/: async_lock.rs  async_locking.rs  lib.rs  lock.rs  locking.rs  types.rs
state/: Cargo.toml
state/src/: _sync.rss  async.rs  error.rs  lib.rs  state.rs  sync.rs  types.rs
