[package]
edition = "2021"
name = "dale"
version = "0.1.0"

[dependencies]
either = {version = "1", optional = true}
futures-core = {version = "0.3"}
http = {version = "0.2", optional = true}
pin-project-lite = "0.2"

[dev-dependencies]
futures-executor = "0.3"

[features]
default = ["std", "either"]

alloc = []
either = ["dep:either"]
std = []
