[package]
edition = "2021"
name = "driver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
async-channel = {version = "1"}
async-oneshot = {version = "0.5"}

futures = {version = "0.3"}
tokio = {version = "1", features = ["rt"], optional = true}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros", "rt-multi-thread", "time"]}

[[example]]
name = "driver"
path = "examples/driver.rs"
required-features = ["tokio"]
