[package]
edition = "2021"
name = "emitter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

sync = ["state/sync", "state/parking_lot"]
thread = ["dep:crossbeam-channel", "sync"]
threadpool = ["dep:threadpool", "dep:num_cpus", "sync"]

[dependencies]
crossbeam-channel = {version = "0.5", optional = true}
generational-arena = {version = "0.2"}
num_cpus = {version = "1", optional = true}
state = {path = "../state", features = ["std"]}
threadpool = {version = "1", optional = true}
