[package]
edition = "2021"
name = "locking"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]

async = ["std", "async-lock", "async-trait"]
lock = []
parking_lot = ["dep:parking_lot", "std"]
spin = ["dep:spin"]
std = []

[dependencies]
async-lock = {version = "2", optional = true}
async-trait = {version = "0.1", optional = true}
parking_lot = {version = "0.12", optional = true}
spin = {version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "rwlock"], optional = true}
