[package]
edition = "2021"
name = "state"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "async"]

async = ["async-trait", "async-lock", "locking/async"]
parking_lot = ["dep:parking_lot", "locking/parking_lot"]
std = ["locking/std"]
sync = ["locking", "dep:spin"]

[dependencies]
async-lock = {version = "2", optional = true}
async-trait = {version = "0.1", optional = true}
locking = {path = "../locking", default-features = false, features = ["lock", "spin"], optional = true}
parking_lot = {version = "0.12", optional = true}
spin = {version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "rwlock"], optional = true}
